<resources>
    <string name="app_name">CryptoHouse</string>
    <string name="about_author">Code &amp; Design: David Wischnjak</string>
    <string name="about_source">Source: https://github.com/wladimir-computin/Android-CryptoIoT-Android</string>
    <string name="preference_devpass_key" translatable="false">devpass</string>
    <string name="preference_devpass_default" translatable="false">TestTest1</string>
    <string name="vault">Vault</string>
    <string name="assistant_label_1">Power up the CryptoIoT Device and tap on \"Connect\"</string>
    <string name="assistant_label_2">Location (GPS) must be enabled because of Android permissions.\n\nYou may also try to powercycle the device five times to perform a factory reset.</string>
    <string name="connect">Connect</string>
    <string name="hostname">Hostname</string>
    <string name="garage">Garage</string>
    <string name="device_password">Device Password</string>
    <string name="any_characters_8_64">Any characters (8-64)</string>
    <string name="wlan">WiFi</string>
    <string name="wifi_mode">WiFi Mode</string>
    <string name="wifi_ssid">WiFi SSID</string>
    <string name="scan">Scan</string>
    <string name="wifi_password_wpa2">WiFi Password (WPA2)</string>
    <string name="apply">apply</string>
    <string name="assistant_label_3">Connect to your WiFi Network and tap on \"Finish\"</string>
    <string name="finish">Finish</string>
    <string name="off_on">OFF/ON</string>
    <string name="energy">Energy</string>
    <string name="cool">COOL</string>
    <string name="dry">DRY</string>
    <string name="fan">FAN</string>
    <string name="auto">AUTO</string>
    <string name="heat">HEAT</string>
    <string name="none">NONE</string>
    <string name="open_close">OPEN / CLOSE</string>
    <string name="ip">IP</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="power">Power</string>
    <string name="total">Total</string>
    <string name="frequency">Frequency</string>
    <string name="voltage">Voltage</string>
    <string name="current">Current</string>
    <string name="start_timer">Start Timer</string>
    <string name="name">Name</string>
    <string name="domain_ip">Domain / IP</string>
    <string name="device_password_short_long">Device password too short or too long (8-64)</string>
    <string name="ssid_long_short">WiFi SSID too short or too long (3-32)</string>
    <string name="wifipass_long_short">WiFi password too short or too long (8-63)</string>
    <string name="wifi_scan_failed">WiFi Scan failed</string>
    <string name="select_ssid">Select SSID</string>
    <string name="wifi_scanning">Scanning, please wait...</string>
    <string name="status">Status</string>
    <string name="response">Response</string>
    <string name="found_new_host">Found new IP</string>
    <string name="no_change_needed">No change needed</string>
    <string name="no_mathing_device">No device with matching hostname found</string>
    <string name="settings">Settings</string>
    <string name="reboot_device">Reboot Device</string>
    <string name="reboot_device_text">Settings saved. The device will load the new settings on next boot.\nReboot now?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="update_server_enabled">Update server enabled on</string>
    <string name="rebooting">Rebooting Device...</string>
    <string name="restart_app">Restart App</string>
    <string name="device_manager">Device Manager</string>
    <string name="assistant">Setup new device</string>
    <string name="about">About</string>
    <string name="scan_network">Scan Network</string>
    <string name="add">New Device</string>
    <string name="reboot">Reboot</string>
    <string name="update_mode">Update mode</string>
    <string name="reset_settings">Reset Settings</string>
    <string name="setup">Setup</string>
    <string name="password">Password</string>
    <string name="browse">Browse</string>
    <string name="export_settings">Export</string>
    <string name="import_settings">Import</string>
    <string name="cancel">Cancel</string>
    <string name="import_failed">Import failed</string>
    <string name="import_success">Import successful</string>
    <string name="export_success">Export successful</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="devices">Devices</string>
    <string name="actions">Actions</string>
    <string name="profile">Profile</string>
    <string name="add_profile">Add Profile</string>
    <string name="delete">Delete</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="delete_profile_question">Do you really want to delete this profile? All associated devices will be removed too.</string>
    <string name="start">Start</string>
    <string name="command">Command</string>
    <string name="any_name_latin">Any latin characters</string>
    <string name="actions_hint">No Actions defined yet.  Actions can send commands to multiple devices at once to automate tasks like \"Turn off lights\".  Click here to create a new Action.</string>
    <string name="actions_devices_hint">Click here to add a new Device to be controlled by this Action</string>
    <string name="devices_controls_hint">No Devices yet.  Setup new Devices using the Device Manager or the Setup Assistant.</string>
    <string name="devices_manager_hint">No Devices yet.  Click here to scan the local network for available Devices.</string>
    <string name="auto_ip_refresh">Update IP automatically</string>
    <string name="radiation">Radiation</string>
    <string name="cpm">CPM</string>
    <string name="dose">Dose (µSv/h)</string>
    <string name="total_dose">Acc. dose (µSv)</string>
    <string name="geiger_display">Display enabled</string>
    <string name="terminal">Terminal</string>
    <string name="title_activity_terminal">Terminal</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="backup_restore">Backup / Restore</string>
    <string name="terminal_v1">Terminal (v1)</string>
    <string name="preset">Preset</string>
    <string name="silent">Silent</string>
    <string name="off">OFF</string>
    <string name="lights">LIGHTS</string>
    <string name="fire">FIRE</string>
    <string name="switch_1">Switch 1</string>
    <string name="switch_2">Switch 2</string>
    <string name="semi">SEMI</string>
    <string name="manual">MANUAL</string>
    <string name="applog">Log</string>
    <string name="device_type">Device Type</string>
    <string name="divider">Divider</string>
    <string name="pmem">Memory</string>
    <string name="time_events">Time Events</string>
    <string name="device_events">Device Events</string>
    <string name="time_events_hint">No Time Events yet.\n\nClick here to add one.</string>
    <string name="add_device">Device</string>
    <string name="add_divider">Divider</string>
    <string name="select_file">Select file</string>
    <string name="import_overwrite">Overwrite existing profiles completely</string>
    <string name="import_password_title">Password required</string>
    <string name="import_password_description">Please enter a password to decrypt the settings file.</string>
    <string name="device_events_hint">No Device Events yet.\n\nClick here to add one.</string>
    <string name="device_event">Event</string>
</resources>