<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_profile"
        android:title="@string/profile">
        <menu>
            <group
                android:id="@+id/nav_profile_group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_add_profile"
                    android:checkable="false"
                    android:icon="@drawable/ic_baseline_add_24"
                    android:orderInCategory="100"
                    android:title="@string/add_profile" />
            </group>
        </menu>

    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_devicecontrols"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/devices"/>

        <item
            android:id="@+id/nav_actions"
            android:icon="@drawable/ic_baseline_play_arrow_24"
            android:title="@string/actions" />

        <item
            android:id="@+id/nav_devicemanager"
            android:icon="@drawable/ic_baseline_handyman_24"
            android:title="@string/device_manager" />

        <item
            android:id="@+id/nav_assistant"
            android:icon="@drawable/ic_baseline_auto_fix_high_24"
            android:title="@string/assistant" />
    </group>

    <item android:title="@string/settings">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_backup_restore"
                    android:icon="@drawable/ic_baseline_settings_backup_restore_24"
                    android:title="@string/backup_restore" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_baseline_info_24"
                    android:title="@string/about" />
            </group>

        </menu>

    </item>
</menu>