<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_apply"
        android:icon="@drawable/ic_baseline_check_24"
        android:title="@string/apply"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_terminal_v1"
        android:icon="@android:drawable/stat_notify_chat"
        android:title="@string/terminal_v1"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_reboot"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/reboot"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_update"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/update_mode"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_reset"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/reset_settings" />
</menu>