<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_scan"
        android:icon="@drawable/ic_baseline_find_replace_24"
        android:title="@string/scan_network"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add"
        app:showAsAction="always" >
        <menu >
            <item
                android:title="@string/add_device"
                android:id="@+id/menu_add_device"/>
            <item
                android:title="@string/add_divider"
                android:id="@+id/menu_add_divider"/>
        </menu>
    </item>

    <item
        android:id="@+id/menu_apply"
        android:icon="@drawable/ic_baseline_check_24"
        android:title="@string/apply"
        app:showAsAction="always" />

</menu>