<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191919"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@android:color/darker_gray"
            android:orientation="vertical"
            android:padding="10dp"
            android:showDividers="middle|beginning">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:text="@string/device_type"
                    android:textColor="@color/colorAccent"
                    android:maxLines="1"
                    app:autoSizeTextType="uniform"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/assistant_devicetype_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="2"
                        android:maxLines="1"
                        android:minHeight="38dp"
                        android:text="..."
                        app:autoSizeTextType="uniform" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/assistant_devicetype_image"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:text="@string/hostname"
                    android:textColor="@color/colorAccent"
                    android:maxLines="1"
                    app:autoSizeTextType="uniform"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/any_name_latin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/assistant_hostname_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="10dp"
                        android:ems="10"

                        android:inputType="textPersonName"
                        android:minHeight="48dp" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:text="@string/device_password"
                    android:textColor="@color/colorAccent"
                    android:maxLines="1"
                    app:autoSizeTextType="uniform" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/any_characters_8_64"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/assistant_devicepass_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textPassword"
                            tools:ignore="SpeakableTextPresentCheck" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:text="@string/wlan"
                    android:textColor="@color/colorAccent"
                    android:maxLines="1"
                    app:autoSizeTextType="uniform" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:gravity="center_vertical"
                            android:text="@string/wifi_mode"
                            android:maxLines="1"
                            android:paddingVertical="7dp"
                            app:autoSizeTextType="uniform"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/assistant_wifi_mode_spinner"/>

                        <Spinner
                            android:id="@+id/assistant_wifi_mode_spinner"
                            android:layout_width="200dp"
                            android:layout_height="0dp"
                            android:entries="@array/wifimodes"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/assistant_wifi_ssid_edittext_container"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:hint="@string/wifi_ssid"
                            app:layout_constraintEnd_toStartOf="@+id/assistant_wifi_scan_button"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/assistant_wifi_ssid_edittext"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:ems="10"
                                android:inputType="textPersonName"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/assistant_wifi_scan_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/scan"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/assistant_wifi_ssid_edittext_container"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:maxLines="1"
                            android:paddingVertical="15dp"
                            app:autoSizeTextType="uniform"/>

                        <ProgressBar
                            android:id="@+id/assistant_wifi_scan_progress"
                            style="?android:attr/progressBarStyle"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:padding="5dp"
                            android:translationZ="10dp"
                            android:visibility="invisible"
                            app:layout_constraintBottom_toBottomOf="@id/assistant_wifi_scan_button"
                            app:layout_constraintLeft_toLeftOf="@id/assistant_wifi_scan_button"
                            app:layout_constraintRight_toRightOf="@id/assistant_wifi_scan_button"
                            app:layout_constraintTop_toTopOf="@id/assistant_wifi_scan_button" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/wifi_password_wpa2"
                        android:visibility="visible"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/assistant_wifi_pass_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/assistant_apply_button"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/apply"
                android:textColor="@color/colorAccent"
                android:maxLines="1"
                android:paddingVertical="12dp"
                app:autoSizeTextType="uniform"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>